--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-time-machine
+theme: jekyll-theme-cayman
 title: Github Page
 description: "This is our Github Page for trimester 3."
 email: "arushi9b@gmail.com"
