--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
-title: Github Page
+title: SAAS Emergency
 description: "This is our Github Page for trimester 3."
 email: "arushi9b@gmail.com"
